# fuzzburn

./: .gitignore  Cargo.toml  README.md
examples/: simple_autograd.rs  transpose_bug.rs
fuzz/: Cargo.toml  fuzz_autograd.rs  fuzz_single_op.rs  fuzz_tensor_ops.rs
fuzz/artifacts/fuzz_autograd/: crash-1040f5a182d8e42a9683af2a0feb0cd13d82da2f  crash-1d5d1b2bdbcf393f6632ffdd8d16e20de4de5b25  crash-1e97e53eccdbb4b0352ce6781afb3adb670916de  crash-28d3080526ea7cb745fa168811d18f7d2dbdefcd  crash-366202b193050d43990fede4dea68c6b1e10adf7  crash-3a4ded26cabeaacd6909c9d89cd085025ecb111e  crash-5b6c1da43663dbc0db8e754fb75d9c2a65835a1b  crash-65cc3560e21dd5baae3b334af7e9087ac3fd5172  crash-68b038e2f063c4825a29d882e7260847745b9036  crash-6b57dc5e05b94b966132e008048e0666b8005a8e  crash-81870c9b668881d780325dd28eef2a513af4974f  crash-83dd6842217671a47cb41f6d2a33ba1e918837dd  crash-8f15ec669a8d23af69e515f37ce622b7428ad047  crash-acb2db192b7cb7791b6afd169ad830b9f0c77f2e  crash-bd45f8e154d9c71a7ff0d359ae627c96c3d89b57  crash-c526e102b1f0caed91222bfd3a8a30e4908a4f7a  crash-ca7b8c68294b61267da26005c61669b3d8edcf6a  crash-dae23ca4df9b01773c01e13bd5932a66114e0594  crash-e9f10edb43c7390d45ecda43242638da192565d6  crash-f198c530890ad766c10df17644b6d5869d512599  crash-f5759c1e5fa45b666070751a966b91bafd3fc2fd  crash-f77d84ab262924700e21247667f05fba4bd9ecef
src/: lib.rs  main.rs
src/ir/: generate.rs  interpreter.rs  mod.rs  ops.rs  program.rs  shape.rs
src/ir/interpreter/: autograd.rs  mod.rs  shape.rs  tensor_program.rs
