[package]
name = "fuzzburn-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[features]
oracle-tch = ["fuzzburn/oracle-tch"]

[dependencies]
libfuzzer-sys = "0.4"
fuzzburn = { path = ".." }

# Two fuzz targets:
#   cargo fuzz run fuzz_tensor_ops  – multi-op TensorProgram, NdArray backend
#   cargo fuzz run fuzz_autograd    – autograd / backward-pass fuzzing

[[bin]]
name = "fuzz_tensor_ops"
path = "fuzz_tensor_ops.rs"
test = false
doc = false

[[bin]]
name = "fuzz_autograd"
path = "fuzz_autograd.rs"
test = false
doc = false
